--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">                                                                
     <head>                                                                      
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url=http://bit.ly/migratefi-launch" />      
-        <link rel="canonical" href="url=http://bit.ly/migratefi-launch" />                    
+        <meta http-equiv="refresh" content="0;url=http://professorjey.com" />      
+        <link rel="canonical" href="url=http://professorjey.com" />                    
     </head>                                                                                                                                                                  
     <body>                                                                      
-       Migrating to <a href="http://bit.ly/migratefi-launch">http://bit.ly/migratefi-launch</a>                                                                
+       Migrating to <a href="http://professorjey.com">our founder @professorJEY 's website</a>.                                                                
     </body>                                                                    
 </html>
